# auth2wd

./: .gitignore  Cargo.toml  Procfile  README.md  build.sh  restart.sh  run_single.sh
.trunk/: trunk.yaml
html/: merge_info.html  root.html  wrapper.html
images/favicon_io/: about.txt
src/: bne.rs  bnf.rs  combinator.rs  external_id.rs  external_importer.rs  gbif_taxon.rs  gnd.rs  id_ref.rs  inaturalist.rs  isni.rs  item_merger.rs  lib.rs  loc.rs  main.rs  merge_diff.rs  meta_item.rs  nb.rs  ncbi_taxonomy.rs  ndl.rs  noraf.rs  nukat.rs  properties.rs  pubchem_cid.rs  selibr.rs  supported_property.rs  ulan.rs  url_override.rs  utility.rs  viaf.rs  worldcat.rs
test_data/: item1.json  item2.json
test_data/fixtures/: bne_XX1234567.rdf  bne_XX990809.rdf  bnf_11898689q.rdf  bnf_15585136v.rdf  gbif_5141342.json  gbif_5141342_images.json  gnd_132539691.rdf  idref_026812304.rdf  inaturalist_627975.html  isni_0000000121251077.html  loc_n78095637.rdf  loc_n80115701.rdf  nb_068364229.json  ncbi_1747344.xml  ndl_00054222.rdf  noraf_90053126.json  pubchem_22027196.json  selibr_231727.rdf  ulan_500228559.rdf  viaf_30701597.rdf  viaf_98777888.rdf  viaf_lookup_dnb_132539691.json  viaf_lookup_isni_0000000121251077.json  viaf_lookup_jpg_500228559.json  viaf_lookup_lc_n78095637.json  viaf_lookup_nukat_n96637319.json  worldcat_E39PBJrcqvXdm3kkwGr7HVG8md.jsonld
tests/: wiremock_tests.rs
