[package]
name = "auth2wd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sophia = { version = "*", features = ["xml"] }
reqwest = { version = "*", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1"
regex = "1"
wikimisc = { git = "https://github.com/magnusmanske/wikimisc" }
serde = "1"
serde_json = "1"
nom-bibtex = "*"
chrono = "*"
axum = { version = "*", features = [
  "http1",
  "http2",
  "tokio",
  "json",
  "macros",
] }
tower = "*"
tracing = "*"
tracing-subscriber = "*"
tower-http = { version = "*", features = ["full"] }
anyhow = "*"
futures = "*"
