[package]
name = "auth2wd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "*"
sophia = { version = "*", features = ["xml"] }
reqwest = { version = "*", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1"
serde-xml-rs = "0.8"
regex = "1"
wikibase_rest_api = { git = "https://github.com/magnusmanske/wikibase_rest_api.git" }
# mediawiki = "*"
wikimisc = { git = "https://github.com/magnusmanske/wikimisc" }
serde = "1"
serde_json = "1"
chrono = "*"
axum = { version = "*", features = [
	"http1",
	"http2",
	"tokio",
	"json",
	"macros",
] }
tracing = "*"
tracing-subscriber = "*"
tower-http = { version = "*", features = ["full"] }
anyhow = "*"
futures = "*"

[profile.dev]
debug = false

[profile.release]
opt-level = 3
lto = 'fat'
panic = 'abort'
codegen-units = 1
